# todo-table

./: .gitignore  Makefile  pyproject.toml
src/todo_table/: cli.py  fire_cli.py  todo.py
tests/: conftest.py  test_cli.py  test_database.py  test_todo.py
